--- a/add_advert.html
+++ b/add_advert.html
@@ -467,70 +467,70 @@
 								
 								<ul class="photoload">
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>		
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>		
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>		
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>										
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>		
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>	
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>	
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>	
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el">
 											<form action="/upload-target" class="dropzone"></form>	
 										</div>
 										<input type="file" name="f">
 									</li>
 									<!-- begin photo -->
-									<li class="photoload-in">
+									<li class="photoload-in" draggable="true">
 										<div class="photoload-el ">
 											<form action="/upload-target" class="dropzone"></form>	
 										</div>
@@ -810,9 +810,10 @@
 	<script src="js/jquery.fancybox-thumbs.js"></script>
 	<script src='js/dropzone.js'></script>
 	<script src="js/lightbox.js"></script>
-	<script src="js/main.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/3.5.2/select2.min.js"></script>
+  <script src="js/jquery-ui-1.7.2.custom.min.js"></script>  
+	<script src="js/main.js"></script>
   <script type="text/javascript">
     $(document).ready(function(){
         $( ".selects" ).select2( { placeholder: "укажите область"} );
