--- a/add_advert.html
+++ b/add_advert.html
@@ -819,6 +819,7 @@
         $( ".selects" ).select2( { placeholder: "укажите область"} );
         $( ".selects1" ).select2( { placeholder: "укажите город"} );
     });
+     Dropzone.prototype.defaultOptions.autoProcessQueue = false;
   </script>
 </body>
 </html>
