--- a/advert_list.html
+++ b/advert_list.html
@@ -83,7 +83,7 @@
 					</div>
 					<div class="city-wrap" id="reg1">
 						<ul class="city-list">
-							<li id="city1-1">Киев</li><li id="city1-2">Белая Церковь</li><li id="city1-3">Буча</li>
+							<li id="city1-1" class="active-ct">Киев</li><li id="city1-2">Белая Церковь</li><li id="city1-3">Буча</li>
 						</ul>
 					</div>
 					<div class="city-wrap" id="reg2">
@@ -200,7 +200,14 @@
 												<li><a href=""><span>Категория 1</span></a></li>
 												<li><a href=""><span>Категория 2</span></a></li>
 												<li><a href=""><span>Категория 3</span></a></li>
-												<li><a href=""><span>Категория 4</span></a></li>
+												<li class="two-nav-submenu">
+													<a href=""><i class="icon-all-more-right-viollet"></i><span>Категория 4</span></a>
+													<ul class="nav-submenu-h">
+														<li><a href=""><span>Категория 1</span></a></li>
+														<li><a href=""><span>Категория 2</span></a></li>
+														<li><a class="active-ct" href=""><span>Категория 3</span></a></li>
+													</ul>
+												</li>
 											</ul>
 										</li>
 										<!-- begin category -->
@@ -322,7 +329,7 @@
 									<ul class="nav-menu">
 										<li><a href="javascript:void(0);"><span>Все</span></a></li>
 										<li><a href="javascript:void(0);"><span>Все</span></a></li>
-										<li><a href="javascript:void(0);"><span>BMW</span></a></li>
+										<li><a class="active-ct" href="javascript:void(0);"><span>BMW</span></a></li>
 										<li><a href="javascript:void(0);"><span>Lexus</span></a></li>
 										<li><a href="javascript:void(0);"><span>Audi</span></a></li>
 									</ul>
@@ -335,7 +342,7 @@
 									<ul class="nav-menu">
 										<li><label><input type="checkbox"><span>Модель</span></label></li>
 										<li><label><input type="checkbox"><span>Все</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
-										<li><label><input type="checkbox"><span>Модель 1</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
+										<li><label class="active-cat"><input type="checkbox"><span>Модель 1</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
 										<li><label><input type="checkbox"><span>Модель 2</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 										<li><label><input type="checkbox"><span>Модель 3</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 									</ul>
@@ -373,7 +380,7 @@
 										<li class="is-active"><a href="javascript:void(0);"><span>Все</span></a></li>
 										<li><a href="javascript:void(0);"><span>17000</span></a></li>
 										<li><a href="javascript:void(0);"><span>20000</span></a></li>
-										<li><a href="javascript:void(0);"><span>25000</span></a></li>
+										<li><a  class="active-cat" href="javascript:void(0);"><span>25000</span></a></li>
 									</ul>
 								</li>
 								<!-- begin select-input both -->
