--- a/add_advert.html
+++ b/add_advert.html
@@ -820,6 +820,7 @@
         $( ".selects1" ).select2( { placeholder: "укажите город"} );
     });
      Dropzone.prototype.defaultOptions.autoProcessQueue = false;
+     Dropzone.prototype.defaultOptions.maxFiles = 1;
   </script>
 </body>
 </html>
