--- a/advert_list.html
+++ b/advert_list.html
@@ -61,7 +61,21 @@
 					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
 					</div>
 				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
-
+				 		<div class="chaked-search">
+							<div class="area-form">
+								<input type="checkbox" name="advert-check" data-validation="required">
+								<p>Искать в заголовке и описании</p>						
+							</div>
+							<div class="area-form">
+								<input type="checkbox" name="advert-check" data-validation="required">
+								<p>Только с фото</p>						
+							</div>
+							<div class="area-form">
+								<input type="checkbox" name="advert-check" data-validation="required">
+								<p>Только с доставкой</p>						
+							</div>
+				 			
+				 		</div>
 				</form>
 
 				<!-- begion location-wrap -->
@@ -137,7 +151,7 @@
 		<!-- begin content-wrap  -->
 		<div class="content-wrap container">
 			<!-- begin banner-inner-top  -->
-			<div class="banner-inner-top">
+			<div class="banner-inner-top for-chaked-search">
 				<a href="#"><img src="img/banners/banner-inner-top.jpg" alt="banner"></a>
 			</div>
 			<!-- end banner-inner-top -->
