--- a/add_advert.html
+++ b/add_advert.html
@@ -392,7 +392,8 @@
 										<div class="lg-name"></div>
 										<div class="lg-subcat"></div>
 										<div class="lg-subname"></div>
-										<div class="lg-all"></div>
+										<!-- <div class="lg-all"></div> -->
+										<input type="text" hidden for-rubric class="lg-all">
 									</div>
 								<!-- <select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Укажите рубрику</option>
