--- a/add_advert.html
+++ b/add_advert.html
@@ -393,7 +393,8 @@
 										<div class="lg-subcat"></div>
 										<div class="lg-subname"></div>
 										<!-- <div class="lg-all"></div> -->
-										<input type="text" hidden for-rubric class="lg-all">
+										<input type="text" hidden  class="lg-id">
+										<input type="text" hidden  class="lg-all">
 									</div>
 								<!-- <select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Укажите рубрику</option>
