--- a/advert_list.html
+++ b/advert_list.html
@@ -219,7 +219,7 @@
 													<ul class="nav-submenu-h">
 														<li><a href=""><span>Категория 1</span></a></li>
 														<li><a href=""><span>Категория 2</span></a></li>
-														<li><a class="active-ct" href=""><span>Категория 3</span></a></li>
+														<li><a  href=""><span>Категория 3</span></a></li>
 													</ul>
 												</li>
 											</ul>
@@ -356,7 +356,7 @@
 									<ul class="nav-menu">
 										<li><label><input type="checkbox"><span>Модель</span></label></li>
 										<li><label><input type="checkbox"><span>Все</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
-										<li><label class="active-cat"><input type="checkbox"><span>Модель 1</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
+										<li><label><input type="checkbox"><span>Модель 1</span><i class="icon-all-info multifilters-info">подсказка, которой повезло - она особенная</i></label></li>
 										<li><label><input type="checkbox"><span>Модель 2</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 										<li><label><input type="checkbox"><span>Модель 3</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 									</ul>
@@ -394,7 +394,7 @@
 										<li class="is-active"><a href="javascript:void(0);"><span>Все</span></a></li>
 										<li><a href="javascript:void(0);"><span>17000</span></a></li>
 										<li><a href="javascript:void(0);"><span>20000</span></a></li>
-										<li><a  class="active-cat" href="javascript:void(0);"><span>25000</span></a></li>
+										<li><a href="javascript:void(0);"><span>25000</span></a></li>
 									</ul>
 								</li>
 								<!-- begin select-input both -->
@@ -425,7 +425,7 @@
 								<li class="multifilters-in multifilters-input multifilters-both">
 									<a href="javascript:void(0);" class="nav-btn" data-mask-text="до (см&sup3;)"><span>Объем двигателя до</span><i class="icon-all-more-bot-orange"></i></a>
 									<i class="clear-filter-btn"></i>
-									<input type="text" class="form-input nav-input mask-input" placeholder="введите" name="capacity_to" data-mask-character="number">
+									<input type="text" class="form-input nav-input mask-input" placeholder="введите" name="capacity_to" data-mask-character="number" value="100">
 									<ul class="nav-menu">
 										<li class="is-active"><a href="javascript:void(0);"><span>Все</span></a></li>
 										<li><a href="javascript:void(0);"><span>150000</span></a></li>
