--- a/add_advert.html
+++ b/add_advert.html
@@ -235,7 +235,7 @@
 											<li id="rubric-subcat-5"><p>Мода и стиль</p></li>
 											<li id="rubric-subcat-6"><p>Недвижимость</p></li>
 											<li id="rubric-subcat-7"><p>Работа</p></li>
-											<li id="rubric-subcat-10"><p>Электроника</p></li>
+											<li class="last-subcat" id="rubric-subcat-10"><p>Электроника</p></li>
 										</ul>
 										<ul class="lg-rubric-subcat" subcat="rubric-cat-2">
 											<li id="rubric-subcat-1"><p>Бизнес и услуги</p></li>
