--- a/add_advert.html
+++ b/add_advert.html
@@ -225,7 +225,7 @@
 											<li id="rubric-cat-7"><p>Работа</p></li>
 											<li id="rubric-cat-8"><p>Транспорт</p></li>
 											<li id="rubric-cat-9"><p>Хобби, отдых и спорт</p></li>
-											<li id="rubric-cat-10"><p>Электроника</p></li>
+											<li ><p>Электроника</p></li>
 										</ul>
 										<ul class="lg-rubric-subcat" subcat="rubric-cat-1">
 											<li id="rubric-subcat-1"><p>Бизнес и услуги</p></li>
@@ -235,7 +235,7 @@
 											<li id="rubric-subcat-5"><p>Мода и стиль</p></li>
 											<li id="rubric-subcat-6"><p>Недвижимость</p></li>
 											<li id="rubric-subcat-7"><p>Работа</p></li>
-											<li class="last-subcat" id="rubric-subcat-10"><p>Электроника</p></li>
+											<li><p>Электроника</p></li>
 										</ul>
 										<ul class="lg-rubric-subcat" subcat="rubric-cat-2">
 											<li id="rubric-subcat-1"><p>Бизнес и услуги</p></li>
@@ -246,7 +246,7 @@
 											<li id="rubric-subcat-7"><p>Работа</p></li>
 											<li id="rubric-subcat-8"><p>Транспорт</p></li>
 											<li id="rubric-subcat-9"><p>Хобби, отдых и спорт</p></li>
-											<li id="rubric-subcat-10"><p>Электроника</p></li>
+											<li><p>Электроника</p></li>
 										</ul>
 										<ul class="lg-rubric-subcat" subcat="rubric-cat-3">
 											<li id="rubric-subcat-1"><p>Бизнес и услуги</p></li>
@@ -382,11 +382,7 @@
 											<li id="rubric-subcat-9"><p>Хобби, отдых и спорт</p></li>
 											<li id="rubric-subcat-10"><p>Электроника</p></li>
 										</ul>
-										<ul class="lg-rubric-subname" subcat="rubric-subcat-10">
-											<li id="rubric-subcat-7"><p>Работа</p></li>
-											<li id="rubric-subcat-9"><p>Хобби, отдых и спорт</p></li>
-											<li id="rubric-subcat-10"><p>Электроника</p></li>
-										</ul>
+										
 									</div>
 									<div class="block-in-rubric">
 										<div class="lg-name"></div>
@@ -395,14 +391,6 @@
 										<!-- <div class="lg-all"></div> -->
 										<input type="hidden" class="lg-id" value="">
 									</div>
-								<!-- <select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
-									<option value="">Укажите рубрику</option>
-									<option value="Рубрика 1">Рубрика 1</option>
-									<option value="Рубрика 2">Рубрика 2</option>
-									<option value="Рубрика 3">Рубрика 3</option>
-									<option value="Рубрика 4">Рубрика 4</option>
-									<option value="Рубрика 5">Рубрика 5</option>
-								</select> -->
 								<i class="icon-success"></i>
 							</div>
 						</div>
@@ -821,7 +809,7 @@
         $( ".selects1" ).select2( { placeholder: "укажите город"} );
     });
      Dropzone.prototype.defaultOptions.autoProcessQueue = false;
-     Dropzone.prototype.defaultOptions.maxFiles = 1;
+     // Dropzone.prototype.defaultOptions.maxFiles = 1;
   </script>
 </body>
 </html>
