--- a/add_advert.html
+++ b/add_advert.html
@@ -807,11 +807,36 @@
     $(document).ready(function(){
         $( ".selects" ).select2( { placeholder: "укажите область"} );
         $( ".selects1" ).select2( { placeholder: "укажите город"} );
+$(".dropzone").dropzone({
+   init: function () {
+    this.on("addedfile", function(file) {
+     // console.log(file);
+     $('.photoload-in').each(function(){
+      var photoIn = $(this).find('.dz-preview');
+      if( photoIn.length > 1){
+       $(this).next().find('.dropzone ').append( photoIn.last())
+       // $(this).find('.dz-preview').last().remove();
+      }
+      var photoDz = $('.photoload-in').find('.dz-preview');
+      if(photoDz.length > 10){
+       photoDz.last().remove();
+      }
+     })
+     $('.dz-error-mark').html('<div class="exit-icon-dz"></div>')
+     $('.dz-error-mark').on('click',function(){
+      $(this).parent().remove();
+     })
+    })
+   }
+  });
     });
      Dropzone.prototype.defaultOptions.autoProcessQueue = false;
      // Dropzone.prototype.defaultOptions.maxFiles = 1;
-     
-     
+Dropzone.autoDiscover = false;
+
+	//event Dropzone
+
+
   </script>
 </body>
 </html>
