--- a/advert_list.html
+++ b/advert_list.html
@@ -522,7 +522,17 @@
 										<li><label><input type="checkbox"><span>Хамелеон</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 									</ul>
 								</li>
-								<li class="chaked-search">
+
+								<!-- begin checkbox -->
+								<li class="multifilters-in multifilters-checkbox one-checkbox">
+									<a href="javascript:void(0);" class="nav-btn"><span>Искать в заголовке и описании</span><i class="icon-all-more-bot-orange"></i></a>
+									<i class="clear-filter-btn"></i>
+									<div class="multifilters-info-wrap"><i class="icon-all-info"></i><span></span></div>
+									<ul class="nav-menu">
+										<li><label><input type="checkbox"><span>Искать в заголовке и описании</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
+									</ul>
+								</li>
+								<!-- <li class="chaked-search">
 									
 									<div class="area-form">
 										<input type="checkbox" name="advert-check" data-validation="required">
@@ -537,7 +547,7 @@
 										<p>Только с доставкой</p>						
 									</div>
 				 			
-								</li>
+								</li> -->
 							</ul>
 						</fieldset>
 					</form>
@@ -966,5 +976,6 @@
 	<script src="js/jquery.fancybox.js"></script>
 	<script src="js/jquery.fancybox-thumbs.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/lightbox.js"></script>
 </body>
 </html>
