--- a/add_advert.html
+++ b/add_advert.html
@@ -806,7 +806,7 @@
 	  <script type="text/javascript">
 	    $(document).ready(function(){
 	    	var placeText = $('.selects').attr('textPlace');
-	        $(".selects").select2( { placeholder: ''+placeText+''} );
+	        $(".selects").select2( { placeholder: 'укажите город'} );
 	        $(".selects1").select2( { placeholder: "укажите город"} );
 			$(".dropzone").dropzone({
 			   init: function () {
