--- a/advert_list.html
+++ b/advert_list.html
@@ -530,6 +530,7 @@
 									<div class="multifilters-info-wrap"><i class="icon-all-info"></i><span></span></div>
 									<ul class="nav-menu">
 										<li><label><input type="checkbox"><span>Искать в заголовке и описании</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
+										<li><label><input type="checkbox"><span>Искать в заголовке и описании</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 									</ul>
 								</li>
 								<!-- <li class="chaked-search">
