--- a/advert_list.html
+++ b/advert_list.html
@@ -525,12 +525,22 @@
 
 								<!-- begin checkbox -->
 								<li class="multifilters-in multifilters-checkbox one-checkbox">
-									<a href="javascript:void(0);" class="nav-btn"><span>Искать в заголовке и описании</span><i class="icon-all-more-bot-orange"></i></a>
+									<a href="javascript:void(0);" class="nav-btn"><span></span><i class="icon-all-more-bot-orange"></i></a>
 									<i class="clear-filter-btn"></i>
 									<div class="multifilters-info-wrap"><i class="icon-all-info"></i><span></span></div>
 									<ul class="nav-menu">
 										<li><label><input type="checkbox"><span>Искать в заголовке и описании</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 										<li><label><input type="checkbox"><span>Искать в заголовке и описании</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
+									</ul>
+								</li>
+								<!-- begin checkbox -->
+								<li class="multifilters-in multifilters-checkbox one-checkbox">
+									<a href="javascript:void(0);" class="nav-btn"><span></span><i class="icon-all-more-bot-orange"></i></a>
+									<i class="clear-filter-btn"></i>
+									<div class="multifilters-info-wrap"><i class="icon-all-info"></i><span></span></div>
+									<ul class="nav-menu">
+										<li><label><input type="checkbox"><span>Только с фото</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
+										<li><label><input type="checkbox"><span>Только с фото</span><i class="icon-all-info multifilters-info">подсказка на все случаи жизни</i></label></li>
 									</ul>
 								</li>
 								<!-- <li class="chaked-search">
